# FGG

./: Cargo.toml  README.md
src/: cli.rs  definition.rs  main.rs
