[package]
name = "fgg"
version = "1.0.0"
authors = ["Clay66"]
description = "A CLI application to connect to The Fighting Game Glossary by Infil"
license = "GPL-3.0"
repository = "https://github.com/Clay-6/FGG"
edition = "2021"
readme = "README.md"
keywords = ["fgc", "glossary", "definitions"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
regex = "1.7.0"
reqwest = "0.11.13"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
tokio = {version = "1.23.0", features = ["full"]}
