[package]
name = "fgg"
version = "1.0.0"
authors = ["Clay66"]
description = "A CLI application to connect to The Fighting Game Glossary by Infil"
license = "GPL-3.0"
repository = "https://github.com/Clay-6/FGG"
edition = "2021"
readme = "README.md"
keywords = ["fgc", "glossary", "definitions"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
tokio = {version = "1.26.0", features = ["full"]}

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
